[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/knight/helm.png" type="Texture" id=1]
[ext_resource path="res://assets/art/knight/king_head.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/bar_back.png" type="Texture" id=3]
[ext_resource path="res://assets/art/ui/bar_front.png" type="Texture" id=4]
[ext_resource path="res://Gui.gd" type="Script" id=5]
[ext_resource path="res://assets/art/ui/start_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/art/ui/start.png" type="Texture" id=7]
[ext_resource path="res://assets/art/weapons/coin.png" type="Texture" id=8]
[ext_resource path="res://assets/font.tres" type="DynamicFont" id=9]

[node name="Gui" type="CanvasLayer"]
layer = 3
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 100.0
margin_bottom = 162.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 100.0
margin_bottom = 16.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )

[node name="king_bar" type="TextureProgress" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_top = 4.0
margin_right = 52.0
margin_bottom = 12.0
size_flags_vertical = 6
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="PanelContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 20.0
margin_bottom = 142.0
size_flags_horizontal = 0
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 100.0
margin_bottom = 162.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="player_bar" type="TextureProgress" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 20.0
margin_top = 4.0
margin_right = 52.0
margin_bottom = 12.0
size_flags_vertical = 4
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 56.0
margin_right = 72.0
margin_bottom = 16.0
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 76.0
margin_top = 3.0
margin_right = 100.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 9 )
text = "1234"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 92.0294
margin_top = 119.26
margin_right = 156.029
margin_bottom = 145.26
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fade" type="Tween" parent="."]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
